--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="content">
         <h1 class="ui dividing header">填寫時間</h1>
 
+        <!-- cards start -->
         <div class="ui cards">
           <div class="ui card">
             <div class="image">
@@ -80,7 +81,48 @@
             </div>
           </div>
         </div>
+
+        <!-- select start -->
+
+        <div class="ui segment">
+          <div class="field">
+            <div class="ui toggle checkbox checked">
+              <input type="checkbox" />
+              <label>凌晨 12 點 ～ 早上 6 點</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui segment">
+          <div class="field">
+            <div class="ui toggle checkbox checked">
+              <input type="checkbox" />
+              <label>早上 6 點 ～ 中午 12 點</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui segment">
+          <div class="field">
+            <div class="ui toggle checkbox checked">
+              <input type="checkbox" />
+              <label>中午 12 點 ～ 晚上 6 點</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui segment">
+          <div class="field">
+            <div class="ui toggle checkbox checked">
+              <input type="checkbox" />
+              <label>晚上 6 點 ～ 半夜 12 點</label>
+            </div>
+          </div>
+        </div>
+
+        <!-- select end -->
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
