--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
         </div>
 
         <!-- select end -->
+
+        <button class="ui labeled icon button">
+          <i class="paper plane outline icon"></i>
+          確認送出
+        </button>
       </div>
     </div>
     <script src="index.js"></script>
