--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <!-- select end -->
 
-        <button class="ui labeled icon button">
+        <button id="submit" class="ui labeled icon button">
           <i class="paper plane outline icon"></i>
           確認送出
         </button>
