--- a/usage.html
+++ b/usage.html
@@ -30,6 +30,50 @@
 
       <div class="content">
         <h1 class="ui dividing header">使用明細</h1>
+
+        <div class="flex">
+          <div class="avatars">
+            <div class="avatar">
+              <img src="https://i.imgur.com/wJ9m6Ng.jpg" />
+              <div class="name">卡比獸</div>
+            </div>
+            <div class="avatar">
+              <img src="https://i.imgur.com/VLRHn00.png" />
+              <div class="name">布丁狗</div>
+            </div>
+            <div class="avatar">
+              <img src="https://i.imgur.com/K7kMpMA.jpg" />
+              <div class="name">百變怪</div>
+            </div>
+            <div class="avatar">
+              <img src="https://i.imgur.com/yzJwHHW.png" />
+              <div class="name">帕恰狗</div>
+            </div>
+          </div>
+
+          <div class="ui segment">
+            <div class="ui progress" data-percent="62">
+              <div class="bar" style="transition-duration: 300ms; width: 62%;">
+                <div class="progress">62%</div>
+              </div>
+            </div>
+            <div class="ui progress success" data-percent="38">
+              <div class="bar" style="transition-duration: 300ms; width: 38%;">
+                <div class="progress">38%</div>
+              </div>
+            </div>
+            <div class="ui progress warning" data-percent="50">
+              <div class="bar" style="transition-duration: 300ms; width: 50%;">
+                <div class="progress">50%</div>
+              </div>
+            </div>
+            <div class="ui progress error" data-percent="20">
+              <div class="bar" style="transition-duration: 300ms; width: 20%;">
+                <div class="progress">20%</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
