--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       <div class="content">
         <h1 class="ui dividing header">填寫時間</h1>
 
+        <h3 class="ui dividing">你是誰？</h3>
+
         <!-- cards start -->
         <div class="ui cards">
           <div class="ui card">
@@ -83,6 +85,8 @@
         </div>
 
         <!-- select start -->
+
+        <h3 class="ui dividing">你今天哪些時段在宿舍</h3>
 
         <div class="ui segment">
           <div class="field">
