--- a/usage.html
+++ b/usage.html
@@ -31,6 +31,7 @@
       <div class="content">
         <h1 class="ui dividing header">使用明細</h1>
 
+        <!-- progress start -->
         <div class="flex">
           <div class="avatars">
             <div class="avatar">
@@ -74,6 +75,43 @@
             </div>
           </div>
         </div>
+
+        <!-- progress end -->
+
+        <table id="usage" class="ui celled table">
+          <thead>
+            <tr>
+              <th>日期</th>
+              <th>時段</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td data-label="date">6/1</td>
+              <td data-label="time">1, 3, 4</td>
+            </tr>
+            <tr>
+              <td data-label="date">6/2</td>
+              <td data-label="time">1, 4</td>
+            </tr>
+            <tr>
+              <td data-label="date">6/3</td>
+              <td data-label="time">1, 2, 4</td>
+            </tr>
+            <tr>
+              <td data-label="date">6/4</td>
+              <td data-label="time">3, 4</td>
+            </tr>
+            <tr>
+              <td data-label="date">6/5</td>
+              <td data-label="time">1, 2, 3, 4</td>
+            </tr>
+            <tr>
+              <td data-label="date">6/1</td>
+              <td data-label="time">1, 3, 4</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
