--- a/pay.html
+++ b/pay.html
@@ -30,6 +30,27 @@
 
       <div class="content">
         <h1 class="ui dividing header">金錢流</h1>
+
+        <table id="pay" class="ui definition celled table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>A</th>
+              <th>B</th>
+              <th>C</th>
+              <th>D</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td data-label="date">給 A</td>
+              <td data-label="time">0 元</td>
+              <td data-label="time">70 元</td>
+              <td data-label="time">80 元</td>
+              <td data-label="time">100 元</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
