--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <!-- select start -->
 
-        <h3 class="ui dividing">你今天哪些時段在宿舍</h3>
+        <h3 class="ui dividing">你昨天哪些時段在宿舍</h3>
 
         <div class="ui segment">
           <div class="field">
