--- a/pay.html
+++ b/pay.html
@@ -43,15 +43,16 @@
           </thead>
           <tbody>
             <tr>
-              <td data-label="date">給 A</td>
-              <td data-label="time">0 元</td>
-              <td data-label="time">70 元</td>
-              <td data-label="time">80 元</td>
-              <td data-label="time">100 元</td>
+              <td data-label="date">餘額</td>
+              <td data-label="time">0</td>
+              <td data-label="time">0</td>
+              <td data-label="time">0</td>
+              <td data-label="time">0</td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
+    <script src="pay.js"></script>
   </body>
 </html>
