Finish get initial value in index page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <img src="https://i.imgur.com/wJ9m6Ng.jpg" />
             </div>
             <div class="content">
-              <a class="header">卡比獸</a>
+              <a class="header"></a>
               <div class="description">
                 0980982161
               </div>
@@ -52,7 +52,7 @@
               <img src="https://i.imgur.com/VLRHn00.png" />
             </div>
             <div class="content">
-              <a class="header">布丁狗</a>
+              <a class="header"></a>
               <div class="description">
                 0980123456
               </div>
@@ -64,7 +64,7 @@
               <img src="https://i.imgur.com/K7kMpMA.jpg" />
             </div>
             <div class="content">
-              <a class="header">百變怪</a>
+              <a class="header"></a>
               <div class="description">
                 0980881122
               </div>
@@ -76,7 +76,7 @@
               <img src="https://i.imgur.com/yzJwHHW.png" />
             </div>
             <div class="content">
-              <a class="header">帕恰狗</a>
+              <a class="header"></a>
               <div class="description">
                 0988130222
               </div>
