--- a/usage.html
+++ b/usage.html
@@ -78,7 +78,7 @@
 
         <!-- progress end -->
 
-        <table id="usage" class="ui celled table">
+        <!-- <table id="usage" class="ui celled table">
           <thead>
             <tr>
               <th>日期</th>
@@ -111,8 +111,9 @@
               <td data-label="time">1, 3, 4</td>
             </tr>
           </tbody>
-        </table>
+        </table> -->
       </div>
     </div>
+    <script src="usage.js"></script>
   </body>
 </html>
