Update usage bar

--- a/usage.html
+++ b/usage.html
@@ -54,23 +54,23 @@
 
           <div class="ui segment">
             <div class="ui progress" data-percent="62">
-              <div class="bar" style="transition-duration: 300ms; width: 62%;">
-                <div class="progress">62%</div>
+              <div class="bar" style="transition-duration: 300ms; width: 0%;">
+                <div class="progress"></div>
               </div>
             </div>
             <div class="ui progress success" data-percent="38">
-              <div class="bar" style="transition-duration: 300ms; width: 38%;">
-                <div class="progress">38%</div>
+              <div class="bar" style="transition-duration: 300ms; width: 0%;">
+                <div class="progress"></div>
               </div>
             </div>
             <div class="ui progress warning" data-percent="50">
-              <div class="bar" style="transition-duration: 300ms; width: 50%;">
-                <div class="progress">50%</div>
+              <div class="bar" style="transition-duration: 300ms; width: 0%;">
+                <div class="progress"></div>
               </div>
             </div>
             <div class="ui progress error" data-percent="20">
-              <div class="bar" style="transition-duration: 300ms; width: 20%;">
-                <div class="progress">20%</div>
+              <div class="bar" style="transition-duration: 300ms; width: 0%;">
+                <div class="progress"></div>
               </div>
             </div>
           </div>
