Get balance in pay page

--- a/pay.html
+++ b/pay.html
@@ -35,19 +35,21 @@
           <thead>
             <tr>
               <th></th>
-              <th>A</th>
-              <th>B</th>
-              <th>C</th>
-              <th>D</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td data-label="date">餘額</td>
-              <td data-label="time">0</td>
-              <td data-label="time">0</td>
-              <td data-label="time">0</td>
-              <td data-label="time">0</td>
+              <td data-label="time"></td>
+              <td data-label="time"></td>
+              <td data-label="time"></td>
+              <td data-label="time"></td>
+              <td data-label="time"></td>
             </tr>
           </tbody>
         </table>
