Add split and pay button

--- a/pay.html
+++ b/pay.html
@@ -53,6 +53,13 @@
             </tr>
           </tbody>
         </table>
+        <button id="split" class="ui labeled icon button">
+          分帳
+        </button>
+
+        <button id="pay" class="ui labeled icon button">
+          乖乖牌轉 100 元給空氣人
+        </button>
       </div>
     </div>
     <script src="pay.js"></script>
