Add last split time in usage page

--- a/usage.html
+++ b/usage.html
@@ -76,6 +76,11 @@
           </div>
         </div>
 
+        <p id="last-split-time">
+          最後分帳時間：
+          <span></span>
+        </p>
+
         <!-- progress end -->
 
         <!-- <table id="usage" class="ui celled table">
