Finish split button

--- a/pay.html
+++ b/pay.html
@@ -53,13 +53,19 @@
             </tr>
           </tbody>
         </table>
+        <p id="last-split-time">
+          最後分帳時間：
+          <span></span>
+        </p>
         <button id="split" class="ui labeled icon button">
+          <i class="dollar sign icon"></i>
           分帳
         </button>
 
-        <button id="pay" class="ui labeled icon button">
+        <!-- <button id="pay" class="ui labeled icon button">
+          <i class="money bill alternate icon"></i>
           乖乖牌轉 100 元給空氣人
-        </button>
+        </button> -->
       </div>
     </div>
     <script src="pay.js"></script>
