--- a/pay.html
+++ b/pay.html
@@ -64,7 +64,7 @@
 
         <h1 class="ui dividing header">轉帳</h1>
 
-        <form class="ui form">
+        <form class="ui form pay">
           <div class="fields">
             <div class="field">
               <label>轉出帳號</label>
@@ -98,7 +98,7 @@
             </div>
             <div class="field">
               <label>金額</label>
-              <input type="text" name="amount" placeholder="金額" />
+              <input type="number" name="amount" placeholder="200" />
             </div>
           </div>
         </form>
