Finish signup page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </h2>
         <div class="item">
           <div class="menu">
+            <a class="item" href="signup.html">註冊</a>
             <a class="active item" href="index.html">填寫時間</a>
             <a class="item" href="usage.html">使用明細</a>
             <a class="item" href="pay.html">金錢流</a>
@@ -41,9 +42,6 @@
             </div>
             <div class="content">
               <a class="header"></a>
-              <div class="description">
-                0986570731
-              </div>
             </div>
           </div>
 
@@ -53,9 +51,6 @@
             </div>
             <div class="content">
               <a class="header"></a>
-              <div class="description">
-                0988840887
-              </div>
             </div>
           </div>
 
@@ -65,9 +60,6 @@
             </div>
             <div class="content">
               <a class="header"></a>
-              <div class="description">
-                0931870526
-              </div>
             </div>
           </div>
 
@@ -77,9 +69,6 @@
             </div>
             <div class="content">
               <a class="header"></a>
-              <div class="description">
-                0980982161
-              </div>
             </div>
           </div>
         </div>
