--- a/usage.html
+++ b/usage.html
@@ -21,6 +21,7 @@
         </h2>
         <div class="item">
           <div class="menu">
+            <a class="item" href="signup.html">註冊</a>
             <a class="item" href="index.html">填寫時間</a>
             <a class="active item" href="usage.html">使用明細</a>
             <a class="item" href="pay.html">金錢流</a>
